--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
+    "emailjs-com": "^3.2.0",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
