--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
     "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
