--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:sitemap": "node ./scripts/generate-sitemap.js"
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
@@ -14,6 +15,7 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "next": "12.0.9",
+    "nextjs-sitemap-generator": "^1.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
